# quaternions-offline

./: .gitignore  Cargo.toml  LICENSE  README.md  build-web.sh  quaternions-offline.d.ts  quaternions-offline.js  quaternions-offline_bg.wasm.d.ts
assets/: arrow.gltf  arrow.mtl
src/: camera.rs  conversion.rs  display.rs  geometry.rs  main.rs  mesh.rs  repr.rs  ui.rs
src/display/: conversion.rs  representation.rs  ui.rs
src/display/ui/: arrow.rs  repr_settings.rs
src/objects/: arrow.rs  group.rs  mod.rs
src/ui/: arrow.rs  common.rs  mod.rs  repr_settings.rs  settings.rs
web/: index.html
