[package]
name = "quaternions-offline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["noweb"]
noweb = ["text_mesh"]
text_mesh = ["bevy_text_mesh"]

[dependencies]
bevy_egui = "0.20.3"
bevy_embedded_assets = "0.7.0"
bevy_obj = "0.10.1"
bevy_text_mesh = { version = "0.6.0", optional = true }

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "x11"
]

[profile.release]
opt-level = "s"
