[package]
name = "quaternions-offline"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["noweb"]
web = ["getrandom/wasm_js", "bevy/webgl2"]
noweb = ["bevy/x11", "bevy/bevy_log"]

[dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
]

[dependencies.bevy_egui]
version = "0.36.0"
default-features = false
features = ["render", "manage_clipboard", "default_fonts"]

[dependencies.bevy_rich_text3d]
version = "0.4.2"
default-features = false
features = ["3d"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
